Fix text not centered on buttuns on safari mobile

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ background-color: #c4c8c7;
 }
 
 .lightGray {
+  padding: 0;
   font-weight: 900;
   color: #4a4f49;
   margin: 6px;
@@ -111,6 +112,7 @@ background-color: #c4c8c7;
 }
 
 .darkGray {
+  padding: 0;
   color: #f9f0e9;
   margin: 6px;
   background: radial-gradient(circle farthest-side at 41px -5px, #fdfdfd 0%,#84807a 50%, #564e43 100%);
@@ -130,6 +132,7 @@ background-color: #c4c8c7;
 }
 
 .yellow {
+  padding: 0;
   font-weight: 900;
   color: #4a4f49;
   margin: 6px;
